@@ -20,6 +20,7 @@
 #include "config.h"
 #include "mixer_api.h"
 #include "output_api.h"
+#include "event_pipe.h"
 
 #include <glib.h>
 #include <alsa/asoundlib.h>
@@ -27,6 +28,15 @@
 #define VOLUME_MIXER_ALSA_DEFAULT		"default"
 #define VOLUME_MIXER_ALSA_CONTROL_DEFAULT	"PCM"
 #define VOLUME_MIXER_ALSA_INDEX_DEFAULT		0
+
+struct alsa_mixer_source {
+	GSource source;
+
+	snd_mixer_t *mixer;
+
+	/** a linked list of all registered GPollFD objects */
+	GSList *fds;
+};
 
 struct alsa_mixer {
 	/** the base mixer class */
@@ -41,6 +51,8 @@ struct alsa_mixer {
 	long volume_min;
 	long volume_max;
 	int volume_set;
+
+	struct alsa_mixer_source *source;
 };
 
 /**
@@ -51,6 +63,161 @@ alsa_mixer_quark(void)
 {
 	return g_quark_from_static_string("alsa_mixer");
 }
+
+/*
+ * GSource helper functions
+ *
+ */
+
+static GSList **
+find_fd(GSList **list_r, int fd)
+{
+	while (true) {
+		GSList *list = *list_r;
+		if (list == NULL)
+			return NULL;
+
+		GPollFD *p = list->data;
+		if (p->fd == fd)
+			return list_r;
+
+		list_r = &list->next;
+	}
+}
+
+static void
+alsa_mixer_update_fd(struct alsa_mixer_source *source, const struct pollfd *p,
+		     GSList **old_r)
+{
+	GSList **found_r = find_fd(old_r, p->fd);
+	if (found_r == NULL) {
+		/* new fd */
+		GPollFD *q = g_new(GPollFD, 1);
+		q->fd = p->fd;
+		q->events = p->events;
+		g_source_add_poll(&source->source, q);
+		source->fds = g_slist_prepend(source->fds, q);
+		return;
+	}
+
+	GSList *found = *found_r;
+	*found_r = found->next;
+
+	GPollFD *q = found->data;
+	if (q->events != p->events) {
+		/* refresh events */
+		g_source_remove_poll(&source->source, q);
+		q->events = p->events;
+		g_source_add_poll(&source->source, q);
+	}
+
+	found->next = source->fds;
+	source->fds = found;
+}
+
+static void
+alsa_mixer_update_fds(struct alsa_mixer_source *source)
+{
+	int count = snd_mixer_poll_descriptors_count(source->mixer);
+	if (count < 0)
+		count = 0;
+
+	struct pollfd *pfds = g_new(struct pollfd, count);
+	count = snd_mixer_poll_descriptors(source->mixer, pfds, count);
+	if (count < 0)
+		count = 0;
+
+	GSList *old = source->fds;
+	source->fds = NULL;
+
+	for (int i = 0; i < count; ++i)
+		alsa_mixer_update_fd(source, &pfds[i], &old);
+	g_free(pfds);
+
+	for (; old != NULL; old = old->next) {
+		GPollFD *q = old->data;
+		g_source_remove_poll(&source->source, q);
+		g_free(q);
+	}
+
+	g_slist_free(old);
+}
+
+/*
+ * GSource methods
+ *
+ */
+
+static gboolean
+alsa_mixer_source_prepare(GSource *_source, G_GNUC_UNUSED gint *timeout_r)
+{
+	struct alsa_mixer_source *source = (struct alsa_mixer_source *)_source;
+	alsa_mixer_update_fds(source);
+
+	return false;
+}
+
+static gboolean
+alsa_mixer_source_check(GSource *_source)
+{
+	struct alsa_mixer_source *source = (struct alsa_mixer_source *)_source;
+
+	for (const GSList *i = source->fds; i != NULL; i = i->next) {
+		const GPollFD *poll_fd = i->data;
+		if (poll_fd->revents != 0)
+			return true;
+	}
+
+	return false;
+}
+
+static gboolean
+alsa_mixer_source_dispatch(GSource *_source,
+			   G_GNUC_UNUSED GSourceFunc callback,
+			   G_GNUC_UNUSED gpointer user_data)
+{
+	struct alsa_mixer_source *source = (struct alsa_mixer_source *)_source;
+
+	snd_mixer_handle_events(source->mixer);
+	return true;
+}
+
+static void
+alsa_mixer_source_finalize(GSource *_source)
+{
+	struct alsa_mixer_source *source = (struct alsa_mixer_source *)_source;
+
+	for (GSList *i = source->fds; i != NULL; i = i->next)
+		g_free(i->data);
+
+	g_slist_free(source->fds);
+}
+
+static GSourceFuncs alsa_mixer_source_funcs = {
+	.prepare = alsa_mixer_source_prepare,
+	.check = alsa_mixer_source_check,
+	.dispatch = alsa_mixer_source_dispatch,
+	.finalize = alsa_mixer_source_finalize,
+};
+
+/*
+ * libasound callbacks
+ *
+ */
+
+static int
+alsa_mixer_elem_callback(G_GNUC_UNUSED snd_mixer_elem_t *elem, unsigned mask)
+{
+	if (mask & SND_CTL_EVENT_MASK_VALUE)
+		event_pipe_emit(PIPE_EVENT_MIXER);
+
+	return 0;
+}
+
+/*
+ * mixer_plugin methods
+ *
+ */
 
 static struct mixer *
 alsa_mixer_init(G_GNUC_UNUSED void *ao, const struct config_param *param,
@@ -95,7 +262,6 @@ alsa_mixer_lookup_elem(snd_mixer_t *handle, const char *name, unsigned idx)
 	}
 
 	return NULL;
-
 }
 
 static bool
@@ -135,6 +301,15 @@ alsa_mixer_setup(struct alsa_mixer *am, GError **error_r)
 	snd_mixer_selem_get_playback_volume_range(am->elem,
 						  &am->volume_min,
 						  &am->volume_max);
+
+	snd_mixer_elem_set_callback(am->elem, alsa_mixer_elem_callback);
+
+	am->source = (struct alsa_mixer_source *)
+		g_source_new(&alsa_mixer_source_funcs, sizeof(*am->source));
+	am->source->mixer = am->handle;
+	am->source->fds = NULL;
+	g_source_attach(&am->source->source, g_main_context_default());
+
 	return true;
 }
 
@@ -168,6 +343,10 @@ alsa_mixer_close(struct mixer *data)
 
 	assert(am->handle != NULL);
 
+	g_source_destroy(&am->source->source);
+	g_source_unref(&am->source->source);
+
+	snd_mixer_elem_set_callback(am->elem, NULL);
 	snd_mixer_close(am->handle);
 }
 
